Changed picture path, fixed alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,22 +54,9 @@ body {
 	text-align: center;
 }
 
-.logo-img-cont {
-	display: inline-block;
-	position: relative;
-	width: 100%;
-}
-
 .logo-img-bg {
 	display: block;
 	width: 100%;
-}
-
-.logo-img-fg {
-	position: absolute;
-	width: 100%;
-	z-index: 1;
-	right: 0%;
 }
 
 .container {
